# pdf2markdown

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.chglog/: config.yml
.github/workflows/: release.yml  test.yml
pdf2markdown/: align_tables.py  cli.py  converter.py
tests/: __init__.py  complex_pdf.py  simple_pdf.py  test_align_tables.py  test_conversion.py
