[project]
name = "pdf2markdown"
version = "0.1.3"
authors = [
    { name = "Jay Edwards", email = "jay@meangrape.com" }
]
description = "Converts PDF files to Markdown format."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pymupdf4llm>=0.0.24",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "neovim>=0.3.1",
    "pyfzf>=0.3.1",
    "pytest>=8.3.5",
    "reportlab>=4.4.1",
    "ruff>=0.11.11",
    "types-reportlab>=4.4.1.20250516",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    ]

[tool.mypy]
strict = true
disable_error_code = ["import-not-found", "import-untyped"]
